--- a/TODO
+++ b/TODO
@@ -1,1 +1,2 @@
 ✅ There is an error when parsing a csv file where a comma comes to soon and it is counted as a comma for the next value
+Fix error with detecting quotes
